docs/build-failures.txt
macOS

Undefined symbols for architecture arm64:
  "cocos2d::CCDrawNode::drawRect(cocos2d::CCRect const&, cocos2d::_ccColor4F const&, float, cocos2d::_ccColor4F const&)", referenced from:
      geode::modifier::AsStaticFunction_playerDestroyed<DMPlayerObject, void (DMPlayerObject::*)(bool)>::Impl<void (DMPlayerObject::*)(bool)>::function(DMPlayerObject*, bool) in 
  "cocos2d::CCMenuItemSprite::create(cocos2d::CCNode*, cocos2d::CCNode*, cocos2d::CCNode*)", referenced from:
      geode::modifier::AsStaticFunction_init<DMEditorPauseLayer, bool (DMEditorPauseLayer::*)(LevelEditorLayer*)>::Impl<bool (DMEditorPauseLayer::*)(LevelEditorLayer*)>::function(DMEditorPauseLayer*, LevelEditorLayer*) in 
ld: symbol(s) not found for architecture arm64
clang: error: linker command failed with exit code 1 (use -v to see invocation)

Android32
 
/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:224:27: error: no member named 'find' in 'gd::string'
  224 |                 int nextSplit = string->find(at, currentStart);
      |                                 ~~~~~~  ^
/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:226:29: error: no member named 'substr' in 'gd::string'
  226 |                         result.push_back(string->substr(currentStart));
      |                                          ~~~~~~  ^
/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:229:28: error: no member named 'substr' in 'gd::string'
  229 |                 result.push_back(string->substr(currentStart, nextSplit - currentStart));
      |                                  ~~~~~~  ^

Android64

/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:224:27: error: no member named 'find' in 'gd::string'
  224 |                 int nextSplit = string->find(at, currentStart);
      |                                 ~~~~~~  ^
/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:226:29: error: no member named 'substr' in 'gd::string'
  226 |                         result.push_back(string->substr(currentStart));
      |                                          ~~~~~~  ^
/home/runner/work/deathmarkers/deathmarkers/src/shared.cpp:229:28: error: no member named 'substr' in 'gd::string'
  229 |                 result.push_back(string->substr(currentStart, nextSplit - currentStart));
      |                                  ~~~~~~  ^

> geode project check
| Info | Fetching dependency from index
| Info | Dependency found: geode.node-ids, version 1.19.0
| Info | Downloading dependency
| Info | Success
| Info | Writing dependency to temp file
| Info | Dependency 'geode.node-ids' found
thread 'main' panicked at src/project.rs:489:64:
called `Result::unwrap()` on an `Err` value: Os { code: 5, kind: PermissionDenied, message: "Zugriff verweigert" }
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace